# PhaseNet-TF-Figures

./: .gitignore  .pylintrc  README.md  pyproject.toml  run.py
fig/: workflow.pptx
notebook/: calculate_metrics.ipynb  calculate_metrics_0725.ipynb  calculate_metrics_for_final_paper_table1.ipynb  check_where_most_frequency_picks.ipynb  construct_final_catalog.ipynb  find_example_why_s_recall_is_small_in_iter3.ipynb  generate_ak135_predictions_for_continious_results.ipynb  generate_catalog_to_share.ipynb  generate_mantle_wedge_event_phasenet_inference.ipynb  get_nearby_isc_events.ipynb  manual_picks_prepare_associated_filter.ipynb  show_mantle_wedge_phasenet.ipynb
phasenettf/: __init__.py
phasenettf/scripts/: __init__.py  associated_events_horizontal.py  associated_events_vertical.py  horizontal_top100km.py  mantle_wedge_events.py  manualscript_final_catalog_three_columns_version.py  manuscirpt_final_catalog_ehb_plot.py  manuscirpt_final_catalog_plot.py  manuscript_compare_final_ehb_catalogs.py  manuscript_compare_gamma_gamma1d_residuals.py  manuscript_compare_models_residuals.py  manuscript_continuous_waveform.py  manuscript_event_station_distribution.py  manuscript_gamma1d_example.py  manuscript_histogram_1hour_catalog.py  manuscript_histogram_1hour_phase.py  manuscript_histogram_continious_catalog.py  manuscript_histogram_continious_phase.py  manuscript_horizontal_benchmark_1hourwindow.py  manuscript_horizontal_continious.py  manuscript_horizontal_continious_300to400km.py  manuscript_phasenet_tf_example.py  manuscript_vertical_continuous.py  manuscript_vertical_crosssections_0to300km.py  (+17 more)
(+5 files in other folders)
