[tool.poetry]
name = "phasenet-tf-figures"
version = "0.1.0"
description = ""
authors = ["Ziyi Xi <ziyixi@mail.ustc.edu.cn>"]
license = "MIT"
readme = "README.md"
packages = [{include = "phasenet_tf_figures"}]

[tool.poetry.dependencies]
python = "^3.9"
pygmt = "^0.8.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
pylint = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
