[tool.poetry]
authors = ["Ziyi Xi <ziyixi@mail.ustc.edu.cn>"]
description = ""
license = "MIT"
name = "phasenet-tf-figures"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
obspy = "^1.4.0"
pygmt = "^0.9.0"
python = "^3.9"
pyproj = "^3.6.0"
xarray = "^2023.5.0"
h5py = "^3.9.0"
nnaudio = "^0.3.2"
torch = "^2.0.1"
torchvision = "^0.15.2"
httpx = "^0.24.1"
pandarallel = "^1.6.5"
ipywidgets = "^8.0.7"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
pylint = "^2.16.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
